--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "perf:analyze": "tsx scripts/analyze-slow-queries.ts",
+    "perf:benchmark": "tsx scripts/benchmark-queries.ts",
+    "perf:test": "npm run perf:benchmark"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.16",
@@ -26,6 +29,7 @@
     "@ai-sdk/mistral": "^1.1.16",
     "@ai-sdk/openai": "^1.1.16",
     "@clerk/backend": "^2.6.2",
+    "@clerk/localizations": "^3.25.7",
     "@clerk/nextjs": "6.23.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.0.1",
@@ -35,6 +39,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
@@ -86,6 +91,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.0.1",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
