--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:e2e": "node scripts/dev-e2e.mjs",
     "tunnel": "ngrok http 3000",
     "env:pull": "vercel env pull .env.local",
-    "build": "prisma generate && next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
