--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "zod": "^4.0.2",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.87.4",
-    "@radix-ui/react-scroll-area": "^1.2.10"
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
