--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.87.4",
     "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-tooltip": "^1.2.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
