--- a/package.json
+++ b/package.json
@@ -75,15 +75,16 @@
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.87.4",
     "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-tooltip": "^1.2.8"
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
     "@radix-ui/react-collapsible": "^1.1.12",
-    "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.8",
@@ -92,6 +93,6 @@
     "prisma": "^6.0.1",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.19.2",
-    "typescript": "^5"
+    
   }
 }
