--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "prettier": "^3.6.2",
     "prisma": "^6.0.1",
     "tailwindcss": "^4.1.13",
-    "tsx": "^4.19.2",
-    
+    "tsx": "^4.19.2"  
   }
 }
